minit/main.css
/* ... */
strong,dfn	{ font-weight: bold; }
em,dfn      { font-style: italic; }
sup, sub    { line-height: 0; }

abbr,
acronym     { border-bottom: 1px dotted #666; }
address     { margin: 0 0 20px; font-style: italic; }
del         { color:#666; }

pre         { margin: 20px 0; white-space: pre-wrap; }
pre,code,tt { font: 11px 'andale mono', 'lucida console', monospace; line-height: 20px; }

/* Lists */
li ul,
li ol       { margin: 0; }
ul, ol      { margin: 0 20px 20px 0; padding-left: 20px; }

ul          { list-style-type: disc; }
ol          { list-style-type: decimal; }

dl          { margin: 0 0 20px 0; }
dl dt       { font-weight: bold; }
dd          { margin-left: 20px;}

/* Tables */
/* 
	Because of the need for padding on TH and TD, the vertical rhythm 
	on table cells has to be 27px, instead of the standard 18px or 36px 
	of other elements. 
 */ 
table       { margin-bottom: 20px; width:100%; }
th          { font-weight: bold; }
thead th    { background: #c3d9ff; }
th,td       { padding: 0px 10px 0px 5px; border: 0;}
caption     { }
/*
	You can zebra-stripe your tables in outdated browsers by adding 
	the class "even" to every other table row. 
 */
tbody tr:nth-child(even) td, 
tbody tr.even td  { 
	background: #e5ecf9; 
}
tfoot       { font-style: italic; }
caption     { background: #eee; }

/* Misc classes */
label       { font-weight: bold; }
fieldset    { line-height: 20px; padding:19px 1.4em 20px 1.4em; margin: 0 0 20px 0; border: 1px solid #ccc; }
legend      { }

input:not([type]),
input[type=text], input[type=password],
input.text, input.title,
textarea {
  border:1px solid #bbb;
}
input[type=text]:focus, input[type=password]:focus,
input.text:focus, input.title:focus,
textarea:focus {
  border-color:#666;
}
select { background-color:#fff; border-width:1px; border-style:solid; }

input:not([type]),
input[type=text], input[type=password], input[type=submit],
input.text, input.title,
textarea, select {
  margin:0px 0 0px;
}

input.text,
input.title   { width: 300px; padding:5px; }
input.title   { font-size:1.5em; }
textarea      { width: 100%; padding:5px; }
/* End */

/* Minit Typography */
a:focus,
a:hover     { text-decoration: underline; }
a:visited   { color: #21759b; }
a:active    { color: #faa700; }
a           { color: #21759b; text-decoration: none; }
img         { vertical-align: middle; }
hr          { height: 1px; color: #ddd; background-color: #ddd; border: 0; margin: 0 0 19px; }
fieldset.nested { margin: 0 0 0.5em 0; padding: 0 0.5em 0.5em; }
select      { vertical-align: top; }
/* End Minit Typography */

/* Minit Layout */
body {
	background-color: #333;
}

#globalWrapper {
	border-top: 0.5em solid #666;
	margin: 1.5em auto 0;
	padding: 20px 0 0;
	width: 70em;
	background-color: white;
	/*background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAUCAYAAAC07qxWAAAAIklEQVQoU2P8DwQMRADGUYX4Qmk0ePCmoSERPO3nXhOVFQBJsk8I3KucbwAAAABJRU5ErkJggg==);
	background-repeat: repeat;
	*/
}

#firstHeading {
	padding: 10px 3em 9px;
	border-bottom: 1px solid #AAA;
}

#columnContent {
	float: left;
	width: 45em;
	margin: 0 3em;
}

#contentSub, #contentSub2 {
	width: auto;
	margin: 0 3em 20px;
}

#content {
}

#columnOne {
	float: left;
	width: 16em;
	margin: 0 3em 0 0;
}

#footer {
	background-color: #111;
	color: #aaa;
	margin: 20px 0 0;
	padding: 20px 3em;
	font-size: 11px;
	line-height: 15px;
}

#footer ul { margin: 0; padding: 0; }
#footer li { display: inline; padding-right: 1em; }

#toc table { padding: 0; }
#toc td { padding: 0; border: 0; }
#toc ul { margin: 0 1.5em 1.5em 0; padding-left: 1.5em; }
#toc ul ul { margin: 0; }
#toc { border: 0; }
#toc h2 { display: inline; }
#toc .toctoggle { display: inline; }

.editsection { font-size: 12px; font-weight: normal; }

/* override */
#pagehistory li { border: 0; }
#pagehistory li.selected { border: 0; }
#editform #editpage-copywarn { display: none; }

.mw-specialpages-table { margin: 0; }
.mw-content-ltr ol,
.mw-content-ltr ul { margin: 0 0 20px 1.5em; }
.mw-content-ltr li ol,
.mw-content-ltr li ul { margin-bottom: 0; }

ul#filetoc { padding: 4px; margin-bottom: 10px; font-size: 100%; }
#catlinks, .catlinks { margin-top: 24px; margin-bottom: 24px; }

/* search bar */
#p-search { position: absolute; top: 74px;}
#p-search h2 { display: none; }
#searchBody input[type="search"] { width: 110px; }
#searchBody input[type="submit"] { margin-left: 0; margin-right: 0; }

/* End Minit Layout */

/**
 * Modified css from the following:
 *
 * MediaWiki 'monobook' style sheet for CSS2-capable browsers.
 * Copyright Gabriel Wicke - http://wikidev.net/
 * License: GPL (http://www.gnu.org/copyleft/gpl.html)
 */
a.stub {
	color: #772233;
}
a.new {
	color: red;
}
a.new:visited {
	color: red;
}

input.historysubmit {
	padding: 0 .3em .3em .3em !important;
	font-size: 94%;
	cursor: pointer;
	height: 1.7em !important;
	margin-left: 1.6em;
}

/*
** the main content area
*/

#siteSub {
	display: none;
}
#jump-to-nav {
	display: none;
}

span.subpages {
	display: block;
}

/* user notification thing */
.usermessage {
	background-color: #ffce7b;
	border: 1px solid #ffa500;
	color: black;
	font-weight: bold;
	margin: 2em 0 1em;
	padding: .5em 1em;
	vertical-align: middle;
}
#siteNotice {
	position: relative;
	text-align: center;
	font-size: 95%;
	padding: 0 0.9em;
}
#siteNotice p {
	margin: 0;
	padding: 0;
}

.catlinks {
	border: 1px solid #aaa;
	background-color: #f9f9f9;
	padding: 5px;
	margin-top: 1em;
	clear: both;
}
/* currently unused, intended to be used by a metadata box
in the bottom-right corner of the content area */
.documentDescription {
	/* The summary text describing the document */
	font-weight: bold;
	display: block;
	margin: 1em 0;
	line-height: 1.5em;
}
.documentByLine {
	text-align: right;
	font-size: 90%;
	clear: both;
	font-weight: normal;
	color: #76797c;
}

/* emulate center */
.center {
	width: 100%;
	text-align: center;
}
*.center * {
	margin-left: auto;
	margin-right: auto;
}
/* ... */

